--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Students</h1>
-<%= link_to 'New Student', '/students/new' %>
+<h4>Average age of all students: <%= @students.average_age %></h4>
 <% @students.each do |student| %>
   <section id="student-<%=student.id%>">
     <h2><%= link_to "#{student.name}", "students/#{student.id}" %></h2>
